Fixed top-border overlap on source view

--- a/styles/modules/Article.scss
+++ b/styles/modules/Article.scss
@@ -169,7 +169,7 @@
         padding: 10px;
         position: absolute;
         resize: none;
-        left: 0; top: 0; bottom: 0; width: 100%;
+        left: 0; top: 1px; bottom: 0; width: 100%;
       }
     }
     &.settings {
